Fix: Set minimum width and height for poster images
Because otherwise on smaller screens it continues to scale down and becomes
ridiculously tiny.

Todo: We want to adjust the scaling and media breaks on all of the elements in
this section to be a bit smoother on smaller screen.

--- a/src/stylesheets/base/_media.scss
+++ b/src/stylesheets/base/_media.scss
@@ -4,6 +4,8 @@
     margin-left: $space-xl;
     width: 18vw;
     height: 20vw;
+    min-height: 236px;
+    min-width: 212px;
 }
 
 .bio-img {
